# odnn

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
cmake/modules/: GoogleBenchmark.cmake  GoogleLogging.cmake  GoogleTest.cmake  libTorch.cmake
docker/: Dockerfile  init_env.sh
docker/install/: install_clang.sh  install_cmake.sh  install_cmake_format.sh  install_llvm.sh
include/odnn/: random.h  scalar_type.h  size.h  tensor.h  typedef.h  util.h
include/odnn/nn/: batchnorm.h  conv.h  conv2d.h  linear.h  relu.h  softmax.h
src/: CMakeLists.txt  array_ref.cc  array_ref.h  builder.h  error.cc  error.h  hello.cc  hello.h  logging.cc  logging.h  random.cc  scalar_type.cc  singleton.cc  singleton.h  size.cc  storage.h  tensor.cc
src/nn/: batchnorm.cc  conv.cc  conv2d.cc  linear.cc  relu.cc  softmax.cc
test/: CMakeLists.txt  array_ref_test.cc  hello_test.cc  size_test.cc  storage_test.cc  tensor_test.cc  util.h
test/nn/: CMakeLists.txt  batchnorm_test.cc  conv2d_test.cc  conv_test.cc  linear_test.cc  relu_test.cc  softmax_test.cc
